Adding hello world project + better documentation

--- a/docker-compose-with-b2g-and-public-bitcoind.yml
+++ b/docker-compose-with-b2g-and-public-bitcoind.yml
@@ -9,7 +9,7 @@ services:
       - 7474:7474
       - 7687:7687
     environment:
-      - NEO4J_AUTH=neo4j/neo4j123
+      - NEO4J_AUTH=neo4j/b2g135!
   # ====================================================================================================================
   blockchain2graph:
     image: straumat/blockchain2graph:2.1-SNAPSHOT
@@ -22,5 +22,5 @@ services:
       - BITCOIND_HOSTNAME=5.196.65.205
       - BITCOIND_USERNAME=bitcoinrpc
       - BITCOIND_PASSWORD=JRkDy3tgCYdmCEqY1VdfdfhTswiRva
-      - SPRING_DATA_NEO4J_URI=bolt://neo4j:neo4j123@neo4j:7687
+      - SPRING_DATA_NEO4J_URI=bolt://neo4j:b2g135!@neo4j:7687
   # ====================================================================================================================
