--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '2'
 services:
   # ====================================================================================================================
   neo4j:
-    image: neo4j:3.3.3
+    image: neo4j:3.3.4
     volumes:
       - ./data/neo4j:/var/lib/neo4j/data
     ports:
       - 7474:7474
       - 7687:7687
     environment:
-      - NEO4J_AUTH=neo4j/neo4j123
+      - NEO4J_AUTH=neo4j/b2g135!
   # ====================================================================================================================
