--- a/docker-compose-with-b2g-and-private-bitcoind.yml
+++ b/docker-compose-with-b2g-and-private-bitcoind.yml
@@ -28,7 +28,7 @@ services:
       - NEO4J_AUTH=neo4j/b2g135!
   # ====================================================================================================================
   blockchain2graph:
-    image: straumat/blockchain2graph:2.1-SNAPSHOT
+    image: straumat/blockchain2graph:2.1
     ports:
       - 8080:8080
     links:
